build/manifests/k8s/services/dumpme/authz.yml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: dumpme
  namespace: default
spec:
  selector:
    matchLabels:
      app: dumpme
      version: v1
  action: ALLOW
  rules:
    - to:
      - operation:
          paths: [ "/dumpme" ]
